# glucat

./: .clang-format  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .pylintrc  AUTHORS  AUTHORS.md  CONTRIBUTING.md  COPYING  ChangeLog  DESIGN  DESIGN.md  Doxyfile  Doxyfile.in  INSTALL  INSTALL.md  Makefile.am  Makefile.am.in  NEWS  README  README.md  TODO  TODO.md  acinclude.m4  aclocal.m4  check_license_headers.py  config.h  config.h.in  config.status  configure  configure.ac.in  configure.files  configure.in  configure.in.end  configure.in.in  format_helper.py  glucat.cppcheck  glucat.directory  glucat.doxygen  glucat.kdevelop  (+12 more)
.devcontainer/: Dockerfile  devcontainer.json
admin/: Makefile.common  acinclude.m4.in  bootstrap.sh  cvs.sh  detect-autoconf.sh  libtool.m4.in  setup-git-hooks.sh
benchmarks/: compare.py  compare_all.py  env-armadillo-blas-openmp.sh  env-armadillo-blas.sh  env-armadillo-flexiblas-openmp.sh  env-armadillo-flexiblas.sh  env-armadillo-openblas-openmp.sh  env-armadillo-openblas.sh  env-armadillo-openmp.sh  env-armadillo.sh  env-eigen-blas-openmp.sh  env-eigen-blas.sh  env-eigen-flexiblas-openmp.sh  env-eigen-flexiblas.sh  (+5 more)
doc/: Makefile.am
doc/benchmarks/: compiler_architecture_comparison_report.md
doc/glucat_user_guide/: glucat_user_guide.tex
doc/glucat_user_guide/chapters/: api_overview.tex  examples.tex  getting_started.tex  intro.tex  programming_guide.tex
doc/pyclical_user_guide/: pyclical_user_guide.tex
doc/pyclical_user_guide/chapters/: applications.tex  basics.tex  geometry.tex  getting_started.tex  intro.tex  tutorials.tex
expressions/: Makefile.am  expressions.cpp  expressions.h
gfft_test/: Makefile.am  Makefile.in  gfft_test.cpp  gfft_test.h
glucat/: Makefile.am  clifford_algebra.h  clifford_algebra_imp.h  errors.h  errors_imp.h  framed_multi.h  framed_multi_imp.h  generation.h  generation_imp.h  global.h  glucat.h  glucat_imp.h  index_set.h  index_set_imp.h  long_double.h  matrix.h  matrix_arma.h  matrix_arma_imp.h  matrix_base.h  matrix_base_imp.h  matrix_eigen.h  matrix_eigen_imp.h  matrix_imp.h  matrix_multi.h  matrix_multi_imp.h  portability.h  promotion.h  qd.h  random.h  scalar.h  scalar_imp.h  tuning.h  ublas.h  ublas_imp.h
glucat/templates/: header_template
products/: Makefile.am  Makefile.in  products.cpp  products.h  tuning.h
pyclical/: Makefile.am  PyCliCal.h  PyCliCal.pyx  PyClical.h  PyClical.pxd  PyClical.py  PyClical.pyx  glucat.pxd  plotting_demo.py  pyclical_demo.out  pyclical_demo.py  pyclical_tutorial.py  pyclical_tutorial_0_0_notation.py  pyclical_tutorial_0_1_index_sets.py  pyclical_tutorial_0_2_operations.py  pyclical_tutorial_0_3_functions.py  pyclical_tutorial_0_4_transcendental.py  pyclical_tutorial_utils.py  setup.py  setup_ext.py  setup_nocython.py  sqrt_log_demo.out  sqrt_log_demo.py  test.out  test.py  test_pytest_doctests.py
pyclical/demos/: Makefile.am  build_pyclical_notebooks.py  clifford_demo.out  clifford_demo.py  conda-install-mayavi.sh  kubuntu-24-conda-install-mayavi.sh  kubuntu-24-mayavi-env.sh  m_theory_demo.py  mayavi-env.sh  plotting_demo.py  plotting_demo_dialog.py  plotting_demo_mayavi.py  pyclical_demo.out  pyclical_demo.py  pyclical_notebook_utils.py  pyclical_tutorial_0_0_notation.py  pyclical_tutorial_0_1_index_sets.py  pyclical_tutorial_0_2_operations.py  pyclical_tutorial_0_3_functions.py  pyclical_tutorial_0_4_transcendental.py  pyclical_tutorial_1_0_plane.py  pyclical_tutorial_1_1_complex.py  pyclical_tutorial_1_2_space.py  pyclical_tutorial_1_3_lorentz.py  pyclical_tutorial_1_4_fourth.py  pyclical_tutorial_1_5_conformal.py  pyclical_tutorial_2_0_wedge_product.py  pyclical_tutorial_utils.py  pyclical_tutorials.py  setup-conda-env.sh  sqrt_log_demo.out  sqrt_log_demo.py  validate_notebooks.py  versor_demo.py
pyclical/demos/plotting/: Makefile.am  export-mayavi-vars.sh  export-plotting-vars.sh  export-pyvista-vars.sh  mayavi-env.yml  plotting-env.yml  plotting_demo_dialog.py  plotting_demo_mayavi.py  plotting_demo_pyvista.py  plotting_demo_pyvista_dialog.py  pyvista-env.yml  requirements-pyvista.txt  setup-mayavi-env.sh  setup-plotting-env.sh  setup-pyvista-env.sh
squaring/: Makefile.am  Makefile.in  squaring.cpp  squaring.h  tuning.h
test/: Makefile.am  Makefile.in  benchmark-all-config-options.sh  benchmark-config-options.txt  benchmark-one-config-option.sh  check-config-options.sh  config-options.txt  control.h  copy-all-benchmark-outputs.sh  copy-all-config-outputs.sh  copy-one-benchmark-output.sh  copy-one-config-output.sh  define-config-options.sh  diff-all-config-outputs.sh  diff-one-config-output.sh  driver.cpp  driver.h  fast-copy-all-config-outputs.sh  fast-copy-one-config-output.sh  fast-diff-all-config-outputs.sh  fast-diff-one-config-output.sh  fast-test-all-config-options.sh  fast-test-one-config-option.sh  ldd_all.sh  peg01.h  peg02.h  peg03.h  peg04.h  peg05.h  peg06.h  peg07.h  peg08.h  peg09.h  peg10.h  peg11.h  peg12.h  peg13.h  peg14.h  peg15.h  peg16.h  (+14 more)
test00/: Makefile.am  Makefile.in  peg00.cpp  peg00.h
test01/: Makefile.am  Makefile.in  peg01.cpp  peg01.h
test02/: Makefile.am  Makefile.in  peg02.cpp  peg02.h
test03/: Makefile.am  Makefile.in  peg03.cpp  peg03.h
test04/: Makefile.am  Makefile.in  peg04.cpp  peg04.h
test05/: Makefile.am  Makefile.in  peg05.cpp  peg05.h
test06/: Makefile.am  Makefile.in  peg06.cpp  peg06.h
test07/: Makefile.am  Makefile.in  peg07.cpp  peg07.h
test08/: Makefile.am  Makefile.in  eg8.txt  peg08.cpp  peg08.h
test09/: Makefile.am  Makefile.in  peg09.cpp  peg09.h
test10/: Makefile.am  Makefile.in  peg10.cpp  peg10.h
test11/: Makefile.am  Makefile.in  peg11.cpp  peg11.h
test12/: Makefile.am  Makefile.in  peg12.cpp  peg12.h
test13/: Makefile.am  Makefile.in  peg13.cpp  peg13.h
test14/: Makefile.am  Makefile.in  peg14.cpp  peg14.h
test15/: Makefile.am  Makefile.in  peg15.cpp  peg15.h
test16/: Makefile.am  Makefile.in  peg16.cpp  peg16.h
test17/: Makefile.am  peg17.cpp  peg17.h
test18/: Makefile.am  peg18.cpp  peg18.h
test19/: Makefile.am  peg19.h  test19.cpp
(+917 files in other folders)
